--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,8 @@ android {
 
 dependencies {
 
-    ext.kotlin_version = '1.4.10'
+    implementation 'com.google.firebase:firebase-database:19.6.0'
+    ext.kotlin_version = '1.4.21'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
@@ -44,17 +45,17 @@ dependencies {
     implementation 'com.hbb20:ccp:2.3.1'
 
     // Retrofit & OkHttp
-    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     // This library is used by retrofit internally to convert json-pojo and pojo-json
-    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     //This library is used to observe the API logs, Http status code and the API response
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.8.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
 
     //Glide
-    compile 'com.github.bumptech.glide:glide:4.8.0'
-    compile 'com.github.bumptech.glide:okhttp3-integration:4.8.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
-    compile 'com.github.bumptech.glide:annotations:4.8.0'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    implementation 'com.github.bumptech.glide:okhttp3-integration:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    implementation 'com.github.bumptech.glide:annotations:4.11.0'
 
     //liquid Swipe
     implementation 'com.cuberto:liquid-swipe:1.0.0'
@@ -63,7 +64,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
-    implementation 'com.google.android.gms:play-services-location:17.0.0'
+    implementation 'com.google.android.gms:play-services-location:17.1.0'
 
     // Import the BoM for the Firebase platform
     implementation platform('com.google.firebase:firebase-bom:26.2.0')
